<resources>
    <string name="app_name">My Great app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verPassword">Verification Password</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="submit">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="description">Description</string>
    <string name="area">Erea</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="create_need">Create Need</string>
</resources>
