<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <Button
        android:id="@+id/buttonCreateNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/create_need"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="123dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCreateNeed"
        app:layout_constraintTop_toBottomOf="@+id/editArea" />

    <EditText
        android:id="@+id/needTitleField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/NeedDescriptionField"
        app:layout_constraintStart_toStartOf="@+id/NeedDescriptionField"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NeedDescriptionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editArea"
        app:layout_constraintStart_toStartOf="@+id/editArea"
        app:layout_constraintTop_toBottomOf="@+id/needTitleField" />

    <AutoCompleteTextView
        android:id="@+id/editArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:hint="@string/area"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NeedDescriptionField" />

    <TextView
        android:id="@+id/textViewCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editArea" />
</androidx.constraintlayout.widget.ConstraintLayout>